# useriam_user_auth_framework

./: .gitignore  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_ZH.md  README_zh.md  bundle.json  cfi_blocklist.txt  hisysevent.yaml  ohos.build  user_auth_framework.gni  userauth.gni
common/: BUILD.gn
common/executors/: BUILD.gn
common/executors/include/: driver.h  driver_manager.h  executor.h  system_ability_status_listener.h
common/executors/src/: driver.cpp  driver_manager.cpp  executor.cpp  idriver_manager.cpp  system_ability_status_listener.cpp
common/logs/: iam_log_tracer.cpp  iam_log_tracer.h  iam_logger.h
common/logs/co_auth/: BUILD.gn
common/logs/user_auth/: BUILD.gn
common/logs/user_idm/: useridm_hilog_wrapper.h
common/test/: iam_fuzz_test.cpp  iam_fuzz_test.h
common/thread_pool/: thread_groups.cpp  thread_groups.h
common/utils/: iam_check.h  iam_defines.h  iam_mem.cpp  iam_mem.h  iam_para2str.h  iam_ptr.h  iam_scope_guard.h  iam_time.cpp  iam_time.h  relative_timer.cpp  relative_timer.h  system_param_manager.cpp  system_param_manager.h  xcollie_helper.cpp  xcollie_helper.h
frameworks/cj/user_auth/: BUILD.gn
frameworks/co_auth/: BUILD.gn
frameworks/co_auth/inc/: auth_executor_registry.h  auth_message.h  co_auth.h  co_auth_info_define.h  coauth_callback_proxy.h  coauth_callback_stub.h  coauth_info_define.h  coauth_proxy.h  executor_callback_proxy.h  executor_callback_stub.h  executor_messenger_proxy.h  executor_messenger_stub.h  i_coauth.h  icoauth_callback.h  iexecutor_callback.h  iexecutor_messenger.h  iquery_callback.h  iset_prop_callback.h  query_callback_proxy.h  query_callback_stub.h  set_prop_callback.h  set_prop_callback_proxy.h  set_prop_callback_stub.h
frameworks/co_auth/src/: auth_attributes.cpp  auth_executor.cpp  auth_executor_registry.cpp  auth_info.cpp  auth_message.cpp  co_auth.cpp  coauth_callback_proxy.cpp  coauth_callback_stub.cpp  coauth_proxy.cpp  executor_callback.cpp  executor_callback_proxy.cpp  executor_callback_stub.cpp  executor_messenger_proxy.cpp  executor_messenger_stub.cpp  executor_mgr.cpp  query_callback_proxy.cpp  query_callback_stub.cpp  set_prop_callback_proxy.cpp  set_prop_callback_stub.cpp
frameworks/common/: BUILD.gn
frameworks/common/inc/: auth_common.h  config_parser.h  modal_extension_callback.h  user_auth_api_event_reporter.h  user_auth_helper.h  user_auth_modal_callback.h
frameworks/common/src/: config_parser.cpp  modal_extension_callback.cpp  user_auth_api_event_reporter.cpp  user_auth_helper.cpp  user_auth_modal_callback.cpp
frameworks/ets/ani/: BUILD.gn
frameworks/legacy/framework_old/: BUILD.gn
frameworks/native/: BUILD.gn
frameworks/native/client/: BUILD.gn  user_auth_client_map
frameworks/native/common/: BUILD.gn
frameworks/native/executors/: BUILD.gn  user_auth_executors_map
frameworks/native/ipc/: BUILD.gn
frameworks/native/userauth/: userauth.cpp
frameworks/user_auth/: BUILD.gn
frameworks/user_auth/inc/: iuser_auth.h  iuserauth_callback.h  user_auth_native.h  userauth_async_stub.h  userauth_proxy.h
frameworks/user_auth/src/: user_auth.cpp  user_auth_native.cpp  userauth_async_stub.cpp  userauth_proxy.cpp
frameworks/user_idm/: BUILD.gn  user_idm.cpp
frameworks/user_idm/inc/: iuser_idm.h  iuseridm_callback.h  useridm_callback_stub.h  useridm_getinfo_callback_stub.h  useridm_getsecinfo_callback_stub.h  useridm_proxy.h
frameworks/user_idm/src/: user_idm.cpp  useridm_callback_stub.cpp  useridm_client.cpp  useridm_getinfo_callback_stub.cpp  useridm_getsecinfo_callback_stub.cpp  useridm_proxy.cpp
interfaces/innerkits/napi/: BUILD.gn
interfaces/innerkits/native/: BUILD.gn
services/: BUILD.gn  BUILD.gni  user_auth_service_map
services/base/: BUILD.gn
services/base/inc/: finite_state_machine.h  hdi_wrapper.h  relative_timer.h  system_ability_listener.h  thread_handler.h  thread_handler_impl.h  thread_handler_manager.h  thread_handler_singleton_impl.h  user_auth_hdi.h
services/base/src/: finite_state_machine_builder.cpp  finite_state_machine_builder.h  finite_state_machine_impl.cpp  finite_state_machine_impl.h  hdi_wrapper.cpp  relative_timer.cpp  system_ability_listener.cpp  thread_handler_impl.cpp  thread_handler_manager.cpp  thread_handler_singleton_impl.cpp
services/co_auth/: BUILD.gn
services/co_auth/common/: BUILD.gn  bundle.json
services/co_auth/inc/: auth_info.h  auth_res_manager.h  auth_res_pool.h  call_monitor.h  coauth_callback.h  coauth_manager.h  coauth_service.h  coauth_stub.h  coauth_thread_pool.h  executor_messenger.h
services/co_auth/src/: auth_res_manager.cpp  auth_res_pool.cpp  call_monitor.cpp  coauth_manager.cpp  coauth_service.cpp  coauth_stub.cpp  coauth_thread_pool.cpp  executor_messenger.cpp
services/common_defines/interfaces/: co_auth_interface.h  executor_callback_interface.h  executor_messenger_interface.h  user_auth_callback.h  user_auth_callback_interface.h  user_auth_interface.h  user_idm.h  user_idm_callback.h  user_idm_callback_interface.h  user_idm_interface.h
services/common_defines/types/: iam_types.h  result_code.h
services/context/: BUILD.gn
services/context/inc/: auth_widget_helper.h  base_context.h  context.h  context_appstate_observer.h  context_callback.h  context_death_recipient.h  context_factory.h  context_helper.h  context_pool.h  delete_context.h  enroll_context.h  identify_context.h  keyguard_status_listener.h  (+15 more)
services/core/: BUILD.gn
services/dfx/: trace.cpp  trace.h
services/engine/: BUILD.gn
services/include/: context_thread_pool.h  thread_groups.h  userauth_adapter.h  userauth_async_proxy.h  userauth_controller.h  userauth_datamgr.h  userauth_excallback_impl.h  userauth_service.h  userauth_stub.h
services/ipc/: BUILD.gn
services/load_mode/: BUILD.gn
services/remote_connect/: BUILD.gn
services/src/: context_thread_pool.cpp  userauth_adapter.cpp  userauth_async_proxy.cpp  userauth_controller.cpp  userauth_datamgr.cpp  userauth_excallback_impl.cpp  userauth_service.cpp  userauth_stub.cpp
services/user_auth/: BUILD.gn
services/user_idm/: BUILD.gn
test/unittest/: BUILD.gn
(+1404 files in other folders)
