# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

userauth_native_part_name = "user_auth"

userauth_root_path = "//base/user_iam/user_auth"

userauth_frameworks_path = "${userauth_root_path}/frameworks"

userauth_interfaces_path = "${userauth_root_path}/interfaces"

coauth_native_part_name = "user_auth"

coauth_root_path = "//base/user_iam/user_auth/"

coauth_service_path = "${coauth_root_path}/services/co_auth"

useridm_native_part_name = "user_auth"

useridm_services_path = "//base/user_iam/user_auth/services/user_idm/"

if (!defined(global_parts_info) ||
    defined(global_parts_info.account_os_account_standard)) {
  has_os_account_part = true
} else {
  has_os_account_part = false
}
