# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("BUILD.gni")

config("userauth_services_config") {
  include_dirs = userauth_services_include_dirs
}

declare_args() {
  user_auth_framework_enabled = true
}

ohos_shared_library("userauthservice") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  cflags = [ "-Oz" ]

  sources = userauth_services_sources
  include_dirs = userauth_services_include_dirs

  deps = userauth_services_deps + userauth_engine_deps
  external_deps = userauth_services_external_deps + userauth_engine_external_deps

  defines = userauth_services_defines

  if (userauth_services_has_os_account_part) {
    cflags_cc = [ "-DHAS_OS_ACCOUNT_PART" ]
  }

  public_configs = [
    ":userauth_services_config",
    "../frameworks/native/ipc:userauth_client_ipc_config",
  ]

  configs = [
    "../common:iam_log_config",
    "../common:iam_utils_config",
  ]

  if (use_musl) {
    version_script = "user_auth_service_map"
  }

  subsystem_name = "useriam"
  part_name = "user_auth_framework"
}
