# Copyright (c) 2025-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../user_auth_framework.gni")

userauth_services_include_dirs = [
  "base/inc",
  "context/inc",
  "core/inc",
  "core/src",
  "ipc/inc",
  "load_mode/inc",
  "remote_connect/inc",
  "../frameworks/common/inc",
]

userauth_services_sources = [
  "base/src/finite_state_machine_builder.cpp",
  "base/src/finite_state_machine_impl.cpp",
  "base/src/hdi_wrapper.cpp",
  "base/src/system_ability_listener.cpp",
  "base/src/thread_handler_impl.cpp",
  "base/src/thread_handler_manager.cpp",
  "base/src/thread_handler_singleton_impl.cpp",
  "context/src/auth_widget_helper.cpp",
  "context/src/base_context.cpp",
  "context/src/context_appstate_observer.cpp",
  "context/src/context_callback_impl.cpp",
  "context/src/context_death_recipient.cpp",
  "context/src/context_factory.cpp",
  "context/src/context_helper.cpp",
  "context/src/context_pool_impl.cpp",
  "context/src/delete_context.cpp",
  "context/src/enroll_context.cpp",
  "context/src/identify_context.cpp",
  "context/src/local_remote_auth_context.cpp",
  "context/src/remote_auth_context.cpp",
  "context/src/remote_auth_invoker_context.cpp",
  "context/src/remote_auth_service.cpp",
  "context/src/remote_executor_stub.cpp",
  "context/src/remote_iam_callback.cpp",
  "context/src/schedule_holder_context.cpp",
  "context/src/set_widget_param_callback_service.cpp",
  "context/src/simple_auth_context.cpp",
  "context/src/trace.cpp",
  "context/src/ui_extension_ability_connection.cpp",
  "context/src/widget_client.cpp",
  "context/src/widget_context.cpp",
  "context/src/widget_context_callback_impl.cpp",
  "context/src/widget_json.cpp",
  "core/src/authentication_impl.cpp",
  "core/src/credential_info_impl.cpp",
  "core/src/credential_updated_manager.cpp",
  "core/src/delete_impl.cpp",
  "core/src/driver_state_manager.cpp",
  "core/src/enrolled_info_impl.cpp",
  "core/src/enrollment_impl.cpp",
  "core/src/event_listener_manager.cpp",
  "core/src/identification_impl.cpp",
  "core/src/ipc_common.cpp",
  "core/src/remote_auth_callback_manager.cpp",
  "core/src/remote_executor_proxy.cpp",
  "core/src/remote_msg_util.cpp",
  "core/src/resource_node_impl.cpp",
  "core/src/resource_node_pool_impl.cpp",
  "core/src/resource_node_utils.cpp",
  "core/src/risk_event_manager.cpp",
  "core/src/schedule_node_builder.cpp",
  "core/src/schedule_node_helper.cpp",
  "core/src/schedule_node_impl.cpp",
  "core/src/schedule_resource_node_listener.cpp",
  "core/src/screenlock_status_listener.cpp",
  "core/src/secure_user_info_impl.cpp",
  "core/src/update_pin_param_impl.cpp",
  "core/src/user_idm_database_impl.cpp",
  "core/src/user_info_impl.cpp",
  "core/src/widget_schedule_node_impl.cpp",
  "ipc/src/co_auth_service.cpp",
  "ipc/src/executor_messenger_service.cpp",
  "ipc/src/hdi_message_callback_service.cpp",
  "ipc/src/service_init_manager.cpp",
  "ipc/src/template_cache_manager.cpp",
  "ipc/src/user_auth_service.cpp",
  "ipc/src/user_idm_service.cpp",
  "load_mode/src/load_mode_handler.cpp",
  "../frameworks/common/src/user_auth_helper.cpp",
]

userauth_services_deps = [
  "../common:iam_utils",
  "../frameworks/native/client:userauth_client",
  "../frameworks/native/common:attributes",
  "../frameworks/native/common:dfx",
  "../frameworks/native/ipc:userauth_service_ipc",
]

userauth_services_external_deps = [
  "ability_base:base",
  "ability_base:configuration",
  "ability_base:want",
  "ability_base:zuri",
  "ability_runtime:ability_connect_callback_stub",
  "ability_runtime:ability_context_native",
  "ability_runtime:abilitykit_native",
  "ability_runtime:app_manager",
  "ability_runtime:extension_manager",
  "access_token:libaccesstoken_sdk",
  "access_token:libtokenid_sdk",
  "c_utils:utils",
  "config_policy:configpolicy_util",
  "drivers_interface_user_auth:libuser_auth_proxy_4.0",
  "drivers_interface_user_auth:libuser_auth_proxy_4.1",
  "hdf_core:libhdf_utils",
  "hdf_core:libhdi",
  "hilog:libhilog",
  "hitrace:hitrace_meter",
  "init:libbeget_proxy",
  "init:libbegetutil",
  "ipc:ipc_core",
  "ipc:ipc_single",
  "napi:ace_napi",
  "node:node_header_notice",
  "libuv:uv",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
]

userauth_services_defines = []

# load_mode conditional
if (user_auth_framework_enable_dynamic_load) {
  userauth_services_sources += [
    "load_mode/src/driver_load_manager.cpp",
    "load_mode/src/load_mode_handler_dynamic.cpp",
    "load_mode/src/service_unload_manager.cpp",
  ]
  userauth_services_defines += [ "ENABLE_DYNAMIC_LOAD" ]
} else {
  userauth_services_sources += [
    "load_mode/src/load_mode_handler_default.cpp",
  ]
}

# remote_connect conditional
if (user_auth_framework_enable_dynamic_load) {
  userauth_services_sources += [
    "remote_connect/dynamic/src/device_manager_util.cpp",
    "remote_connect/dynamic/src/remote_connect_manager.cpp",
  ]
} else {
  userauth_services_sources += [
    "remote_connect/default/src/device_manager_util.cpp",
    "remote_connect/default/src/remote_connect_listener.cpp",
    "remote_connect/default/src/remote_connect_listener_manager.cpp",
    "remote_connect/default/src/remote_connect_manager.cpp",
    "remote_connect/default/src/socket_factory.cpp",
    "remote_connect/default/src/soft_bus_base_socket.cpp",
    "remote_connect/default/src/soft_bus_client_socket.cpp",
    "remote_connect/default/src/soft_bus_manager.cpp",
    "remote_connect/default/src/soft_bus_message.cpp",
    "remote_connect/default/src/soft_bus_server_socket.cpp",
    "remote_connect/default/src/soft_bus_socket_listener.cpp",
  ]
  userauth_services_include_dirs += [ "remote_connect/default/inc" ]
  userauth_services_external_deps += [
    "access_token:libtokensetproc_shared",
    "device_manager:devicemanagersdk",
    "dsoftbus:softbus_client",
  ]
}

# os_account conditional
userauth_services_has_os_account_part = !defined(global_parts_info) ||
    defined(global_parts_info.account_os_account)

if (userauth_services_has_os_account_part) {
  userauth_services_sources += [ "core/src/os_accounts_manager_impl.cpp" ]
  userauth_services_external_deps += [ "os_account:os_account_innerkits" ]
} else {
  userauth_services_sources += [ "core/src/os_accounts_manager_mock.cpp" ]
}

# screenlock conditional
if (screenlock_client_enable) {
  userauth_services_sources +=
      [ "core/src/strong_auth_status_manager_impl.cpp" ]
  userauth_services_external_deps += [
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "preferences:native_preferences",
    "screenlock_mgr:screenlock_client",
    "window_manager:libdm_lite",
  ]
  userauth_services_defines += [ "SCREENLOCK_CLIENT_ENABLE" ]
} else {
  userauth_services_sources +=
      [ "core/src/strong_auth_status_manager_mock.cpp" ]
}

# sceneboard conditional
if (window_manager_use_sceneboard) {
  userauth_services_external_deps += [ "window_manager:libdm_lite" ]
  userauth_services_defines += [ "SCENE_BOARD_ENABLE" ]
} else {
  userauth_services_external_deps += [ "window_manager:libdm" ]
}

# notification conditional
userauth_services_has_notification = !defined(global_parts_info) ||
    defined(global_parts_info.notification_common_event_service)

if (userauth_services_has_notification) {
  userauth_services_sources += [ "core/src/publish_event_adapter.cpp" ]
  userauth_services_external_deps +=
      [ "common_event_service:cesfwk_innerkits" ]
} else {
  userauth_services_sources += [ "core/src/publish_event_adapter_mock.cpp" ]
}
