# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("iam_attributes_config") {
  include_dirs = [ "//base/useriam/user_auth_framework/frameworks/legacy/inner_api_old/co_auth" ]
}

ohos_source_set("iam_attributes") {
  include_dirs =
      [ "//base/useriam/user_auth_framework/frameworks/legacy/inner_api_old/" ]

  sources = [ "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/attributes.cpp" ]

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]

  public_configs = [ ":iam_attributes_config" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "utils_base:utils",
  ]
}

config("coauth_framework_public_config") {
  include_dirs = [
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/inc",
    "//base/useriam/user_auth_framework/frameworks/legacy/inner_api_old/co_auth",
    "//base/useriam/user_auth_framework/frameworks/legacy/inner_api_old/common",
    "//base/useriam/user_auth_framework/services/base/inc",
  ]
}

ohos_shared_library("coauth_framework") {
  include_dirs = [
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/inc",
    "//base/useriam/user_auth_framework/common/utils",
    "//base/useriam/user_auth_framework/common/logs",
  ]

  sources = [
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/auth_executor.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/auth_executor_registry.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/auth_message.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/coauth_proxy.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/executor_callback_stub.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/executor_messenger_proxy.cpp",
    "//base/useriam/user_auth_framework/frameworks/legacy/framework_old/src/executor_mgr.cpp",
  ]

  deps = [ ":iam_attributes" ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]

  public_configs = [
    ":coauth_framework_public_config",
    "//base/useriam/user_auth_framework/common:iam_log_config",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  part_name = "user_auth_framework"
}
